# ConsoleFormatter

./: CMakeLists.txt  README.md  demo.cpp  main.cpp
include/: TextFormatting.hpp
test/: TextCustomManipSuite.cpp  TextStyleTest.cpp
